2009-12-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMessagePortNameServer.m: Tolerate '*' host name.
	* Source/NSConnection.m: Clarify documentation slightly.
	* NSSocketPort.m:
	* win32/GSFileHandle.m:
	Fixup missing notification changes.

2009-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationQueue.m: Rewrite queue handling to attempt to
	fix bug #28104 by posting notifications matching the current run loop
	mode and leaving others queued.
	Also, change the meanining of a nil modes argument when enqueing a
	notification to match OSX and assume NSDefaultRunLoopMode.
	* Source/Additions/GSXML.m: Fix minor sax callback bug.
	* Source/NSConnection.m: Don't send a response packet if the method
	is oneway void return type and has no output parameters.

2009-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: When serializing 'xml' style property lists
	call -description to ensure that dictionary keys are strings since no
	other option is permitted in the dtd.

2009-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationQueue.m:
	* Source/NSRunLoop.m:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/win32/GSRunLoopCtxt.m:
	* Source/GSPrivate.h:
	Pass current runloop mode to notification functions.  Next we need
	to add code to use this information.

2009-11-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: Revert last change, which broke XML
	generation by placing illegal character entities in the output.
	Fix menu position problem by adding missing code to unescape
	the \U escapes we put in the output when we read back in again.
	NB. should check that we use character entities for all legal
	characters and only use the escape mechanism for *really* illegal
	ones (such as the menu location key).

2009-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPropertyList.m (XString): Write out proper XML encoding
	for control characters. Fixes a bug where menu positions in GUI