@@ -1,3 +1,12 @@
+2009-12-02 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSMessagePortNameServer.m:
+	* Source/NSMessagePort.m:
+	On initialisation, remove any old ports/names for the current process
+	idntifier.  Also remove ports/names for processes which don't exist.
+	Avoids any possibility of nameserver confusion between two processes
+	with the same ID.
+
 2009-12-01 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSMessagePortNameServer.m: Tolerate '*' host name.
